# wine

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
notebooks/: data_exploration.ipynb  decision_tree_numpy.ipynb  linear_regression_numpy.ipynb
src/data/: preparation.py
src/models/: decision_tree_numpy.py  linear_regression_numpy.py
src/utils/: data_downloader.py
