[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wine-quality"
version = "0.1.0"
description = "Wine quality prediction API using ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas~=2.2.0",
    "numpy~=1.26.0",
    "scikit-learn~=1.6.0",
    "joblib~=1.4.0",
    "fastapi~=0.115.0",
    "uvicorn~=0.32.0",
    "pydantic~=2.10.0",
    "requests~=2.32.0",
    "httpx~=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.0",
    "ipykernel",
    "seaborn", 
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
